--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/setup-node@v1
         with: 
           node-version: 12
+      - run: npm ci    
       - run: npm test
       - run: npm run build
       - run: npm run deploy
